[project]
name = "KanQiChao_v1.0"
version = "1.0.0"
authors = [
  { name="Brandon Chao", email="bchao@cpp.edu" },
]
description = "Handwriting Interpreter for Kanji"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Guapos-CS4800/KanQichao"
"Bug Tracker" = "https://github.com/Guapos-CS4800/KanQichao/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"